--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ subaffiliation: School of Aeronautic Science and Engineering
 affiliation_link: https://www.buaa.edu.cn/
 subaffiliation_link: http://www.ase.buaa.edu.cn/
 affiliation_logo: ./assets/img/spinion.svg
-email: fang_yuan_liu (at) buaa.edu.cn
-email2: fangyuanliu9527 (at) gmail.com
+email: fang_yuan_liu'@'buaa.edu.cn
+email2: fangyuanliu9527'@'gmail.com
 address: Xueyuan Road, Haidian Distinct, Beijing, China
 address_link: https://www.google.fr/maps/place/Spin-Ion+Technologies/@48.7124352,2.194429,17z/data=!3m2!4b1!5s0x47e678bdc29075f7:0xbce23cefe16f4791!4m6!3m5!1s0x47e678bdc3c95555:0xe09ceff0db3725ab!8m2!3d48.7124317!4d2.1970093!16s%2Fg%2F11r4m02q4g?entry=ttu
 
@@ -31,7 +31,7 @@ twitter:
 researchgate: https://www.researchgate.net/profile/Song-Chen-60
 
 # Images 
-avatar: ./assets/img/avatar.jpg
+avatar: ./assets/img/huanqiu.png
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
