--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ subaffiliation: School of Aeronautic Science and Engineering
 affiliation_link: https://www.buaa.edu.cn/
 subaffiliation_link: http://www.ase.buaa.edu.cn/
 affiliation_logo: ./assets/img/spinion.svg
-email: fang_yuan_liu'@'buaa.edu.cn
-email2: fangyuanliu9527'@'gmail.com
+email: fang_yuan_liu@buaa.edu.cn
+email2: fangyuanliu9527@gmail.com
 address: Xueyuan Road, Haidian Distinct, Beijing, China
-address_link: https://www.google.fr/maps/place/Spin-Ion+Technologies/@48.7124352,2.194429,17z/data=!3m2!4b1!5s0x47e678bdc29075f7:0xbce23cefe16f4791!4m6!3m5!1s0x47e678bdc3c95555:0xe09ceff0db3725ab!8m2!3d48.7124317!4d2.1970093!16s%2Fg%2F11r4m02q4g?entry=ttu
+address_link: https://www.google.com/maps/place/Beihang+University/@39.9807418,116.3264505,14.3z/data=!4m10!1m2!2m1!1sbeihang+university!3m6!1s0x35f0540b91d0a11b:0x6601a3689171505b!8m2!3d39.9843568!4d116.3446392!15sChJiZWloYW5nIHVuaXZlcnNpdHmSAQp1bml2ZXJzaXR54AEA!16zL20vMDJ2NGd6?entry=ttu
 
 # Search Engine Optimization (SEO)
-keywords: song chen, chen song, songchen, chensong
+keywords: fangyuan liu, liu fangyuan, liufangyuan, fangyuanliu, squcle, squcleleo
 canonical: https://minimal-light-theme.yliu.me/
 description: Song Chen is a Ph.D. canditate at Spin-Ion Technologies and Université Paris-Saclay. His research lies at using magneto-ionics to develop new concepts for magnetic data storage, spintronic devices and magnonics, always with the aim of improving energy efficiency with respect to currently available technologies - with a special focus on the boosting magneto-ionic effect using ion irradiation & ion implantation.
 
