--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ enable_hopkins_logo: false
 enable_last_update: false
 
 # Links
-google_scholar: https://scholar.google.com/citations?user=sf-0AGoAAAAJ&hl=de
+google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=bbtDGrAAAAAJ
 cv_link: 
 github_link: https://github.com/song-chen1/
-linkedin: https://www.linkedin.com/in/song-chen-3449b9278/
-twitter: 
-researchgate: https://www.researchgate.net/profile/Song-Chen-60
+linkedin: https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit
+twitter: https://twitter.com/Squcle9527
+researchgate: https://www.researchgate.net/profile/Fangyuan_Liu3
 
 # Images 
 avatar: ./assets/img/huanqiu.png
