--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ enable_last_update: false
 # Links
 google_scholar: https://scholar.google.com/citations?hl=zh-CN&user=bbtDGrAAAAAJ
 cv_link: 
-github_link: https://github.com/song-chen1/
+github_link: https://github.com/Fangyuanliu9527
 linkedin: https://www.linkedin.com/feed/?trk=guest_homepage-basic_google-one-tap-submit
 twitter: https://twitter.com/Squcle9527
 researchgate: https://www.researchgate.net/profile/Fangyuan_Liu3
